--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,17 @@
+# Jetbrains
 .idea/
 
 __pycache__/
+#scripts/__pycache__/
+
 *.py[cod]
 *$py.class
 
 # Jupyter Notebook
 .ipynb_checkpoints
+
+# Jupyterbook
+_build/
 
 # IPython
 profile_default/
